lowering/parser/generated/JOILangParser.py
# Generated from JOILang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JOILangParser ( Parser ):

    grammarFileName = "JOILang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "'>'", "'<'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'wait until'", 
                     "'break'", "'delay'", "'loop'", "'if'", "'else'", "'for'", 
                     "'not'", "'all'", "'any'", "'or'", "'and'", "'MSEC'", 
                     "'SEC'", "'MIN'", "'HOUR'", "'DAY'", "'true'", "'false'", 
                     "'>='", "'<='", "'=='", "'!='", "':='", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "','", "':'", "';'", "'['", "']'", 
                     "'.'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INTEGER", 
                      "DOUBLE", "STRING_LITERAL", "WAIT_UNTIL", "BREAK", 
                      "DELAY", "LOOP", "IF", "ELSE", "FOR_EACH", "NOT", 
                      "ALL", "ANY", "OR", "AND", "MILLISECOND", "SECOND", 
                      "MINUTE", "HOUR", "DAY", "TRUE", "FALSE", "GE", "LE", 
                      "EQ", "NE", "INITIAL_ASSIGN", "ASSIGN", "PLUS", "MINUS", 
                      "TIMES", "DIVIDE", "COMMA", "COLON", "SEMICOLON", 
                      "LBRACKET", "RBRACKET", "DOT", "OR_FLAG", "IDENTIFIER", 
                      "TAG_IDENTIFIER", "HASHTAG_ID", "WS", "NEWLINE", "COMMENT_SINGLE_LINE", 
                      "COMMENT_MULTI_LINE", "ERROR_TOKEN" ]

    RULE_scenario = 0
    RULE_statement_list = 1
    RULE_statement = 2
    RULE_break = 3
    RULE_compound_statement = 4
    RULE_value_assign_behavior = 5
    RULE_action_behavior = 6
    RULE_output = 7
    RULE_range_type = 8
    RULE_tag_list = 9
    RULE_hashtag_list = 10
    RULE_action_input = 11
    RULE_arithmetic_expression = 12
    RULE_input_list = 13
    RULE_primary_expression = 14
    RULE_for_each_statement = 15
    RULE_list_expression = 16
    RULE_if_statement = 17
    RULE_condition_list = 18
    RULE_condition_atom = 19
    RULE_comparison_operator = 20
    RULE_else_statement = 21
    RULE_loop_statement = 22
    RULE_loop_condition = 23
    RULE_period_time = 24
    RULE_time_unit = 25
    RULE_wait_until_statement = 26
    RULE_delay_statement = 27

    ruleNames =  [ "scenario", "statement_list", "statement", "break", "compound_statement", 
                   "value_assign_behavior", "action_behavior", "output", 
                   "range_type", "tag_list", "hashtag_list", "action_input", 
                   "arithmetic_expression", "input_list", "primary_expression", 
                   "for_each_statement", "list_expression", "if_statement", 
                   "condition_list", "condition_atom", "comparison_operator", 
                   "else_statement", "loop_statement", "loop_condition", 
                   "period_time", "time_unit", "wait_until_statement", "delay_statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    INTEGER=7
    DOUBLE=8
    STRING_LITERAL=9
    WAIT_UNTIL=10
    BREAK=11
    DELAY=12
    LOOP=13
    IF=14
    ELSE=15
    FOR_EACH=16
    NOT=17
    ALL=18
    ANY=19
    OR=20
    AND=21
    MILLISECOND=22
    SECOND=23
    MINUTE=24
    HOUR=25
    DAY=26
    TRUE=27
    FALSE=28
    GE=29
    LE=30
    EQ=31
    NE=32
    INITIAL_ASSIGN=33
    ASSIGN=34
    PLUS=35
    MINUS=36
    TIMES=37
    DIVIDE=38
    COMMA=39
    COLON=40
    SEMICOLON=41
    LBRACKET=42
    RBRACKET=43
    DOT=44
    OR_FLAG=45
    IDENTIFIER=46
    TAG_IDENTIFIER=47
    HASHTAG_ID=48
    WS=49
    NEWLINE=50
    COMMENT_SINGLE_LINE=51
    COMMENT_MULTI_LINE=52
    ERROR_TOKEN=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScenarioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(JOILangParser.Statement_listContext,0)


        def EOF(self):
            return self.getToken(JOILangParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(JOILangParser.NEWLINE)
            else:
                return self.getToken(JOILangParser.NEWLINE, i)

        def getRuleIndex(self):
            return JOILangParser.RULE_scenario

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScenario" ):
                listener.enterScenario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScenario" ):
                listener.exitScenario(self)




    def scenario(self):

        localctx = JOILangParser.ScenarioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_scenario)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==50:
                self.state = 56
                self.match(JOILangParser.NEWLINE)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.statement_list()
            self.state = 63
            self.match(JOILangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JOILangParser.StatementContext)
            else:
                return self.getTypedRuleContext(JOILangParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(JOILangParser.NEWLINE)
            else:
                return self.getToken(JOILangParser.NEWLINE, i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(JOILangParser.SEMICOLON)
            else:
                return self.getToken(JOILangParser.SEMICOLON, i)

        def getRuleIndex(self):
            return JOILangParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)




    def statement_list(self):

        localctx = JOILangParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.statement()
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 67 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 66
                        _la = self._input.LA(1)
                        if not(_la==41 or _la==50):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 69 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==41 or _la==50):
                            break

                    self.state = 71
                    self.statement() 
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41 or _la==50:
                self.state = 77
                _la = self._input.LA(1)
                if not(_la==41 or _la==50):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value_assign_behavior(self):
            return self.getTypedRuleContext(JOILangParser.Value_assign_behaviorContext,0)


        def action_behavior(self):
            return self.getTypedRuleContext(JOILangParser.Action_behaviorContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(JOILangParser.If_statementContext,0)


        def loop_statement(self):
            return self.getTypedRuleContext(JOILangParser.Loop_statementContext,0)


        def for_each_statement(self):
            return self.getTypedRuleContext(JOILangParser.For_each_statementContext,0)


        def wait_until_statement(self):
            return self.getTypedRuleContext(JOILangParser.Wait_until_statementContext,0)


        def delay_statement(self):
            return self.getTypedRuleContext(JOILangParser.Delay_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(JOILangParser.Compound_statementContext,0)


        def break_(self):
            return self.getTypedRuleContext(JOILangParser.BreakContext,0)


        def getRuleIndex(self):
            return JOILangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = JOILangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.value_assign_behavior()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.action_behavior()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.loop_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.for_each_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.wait_until_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.delay_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 90
                self.compound_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 91
                self.break_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(JOILangParser.BREAK, 0)

        def getRuleIndex(self):
            return JOILangParser.RULE_break

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak" ):
                listener.enterBreak(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak" ):
                listener.exitBreak(self)




    def break_(self):

        localctx = JOILangParser.BreakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_break)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(JOILangParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(JOILangParser.Statement_listContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(JOILangParser.NEWLINE)
            else:
                return self.getToken(JOILangParser.NEWLINE, i)

        def getRuleIndex(self):
            return JOILangParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)




    def compound_statement(self):

        localctx = JOILangParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(JOILangParser.T__0)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==50:
                self.state = 97
                self.match(JOILangParser.NEWLINE)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.statement_list()
            self.state = 104
            self.match(JOILangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_assign_behaviorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def output(self):
            return self.getTypedRuleContext(JOILangParser.OutputContext,0)


        def ASSIGN(self):
            return self.getToken(JOILangParser.ASSIGN, 0)

        def arithmetic_expression(self):
            return self.getTypedRuleContext(JOILangParser.Arithmetic_expressionContext,0)


        def INITIAL_ASSIGN(self):
            return self.getToken(JOILangParser.INITIAL_ASSIGN, 0)

        def getRuleIndex(self):
            return JOILangParser.RULE_value_assign_behavior

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue_assign_behavior" ):
                listener.enterValue_assign_behavior(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue_assign_behavior" ):
                listener.exitValue_assign_behavior(self)




    def value_assign_behavior(self):

        localctx = JOILangParser.Value_assign_behaviorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_value_assign_behavior)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.output()
                self.state = 107
                self.match(JOILangParser.ASSIGN)
                self.state = 108
                self.arithmetic_expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.output()
                self.state = 111
                self.match(JOILangParser.INITIAL_ASSIGN)
                self.state = 112
                self.arithmetic_expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Action_behaviorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def range_type(self):
            return self.getTypedRuleContext(JOILangParser.Range_typeContext,0)


        def tag_list(self):
            return self.getTypedRuleContext(JOILangParser.Tag_listContext,0)


        def DOT(self):
            return self.getToken(JOILangParser.DOT, 0)

        def IDENTIFIER(self):
            return self.getToken(JOILangParser.IDENTIFIER, 0)

        def action_input(self):
            return self.getTypedRuleContext(JOILangParser.Action_inputContext,0)


        def output(self):
            return self.getTypedRuleContext(JOILangParser.OutputContext,0)


        def ASSIGN(self):
            return self.getToken(JOILangParser.ASSIGN, 0)

        def getRuleIndex(self):
            return JOILangParser.RULE_action_behavior

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction_behavior" ):
                listener.enterAction_behavior(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction_behavior" ):
                listener.exitAction_behavior(self)




    def action_behavior(self):

        localctx = JOILangParser.Action_behaviorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_action_behavior)
        self._la = 0 # Token type
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 116
                    self.output()
                    self.state = 117
                    self.match(JOILangParser.ASSIGN)


                self.state = 121
                self.range_type()
                self.state = 122
                self.match(JOILangParser.T__2)
                self.state = 123
                self.tag_list()
                self.state = 124
                self.match(JOILangParser.T__3)
                self.state = 125
                self.match(JOILangParser.DOT)
                self.state = 126
                self.match(JOILangParser.IDENTIFIER)
                self.state = 127
                self.match(JOILangParser.T__2)
                self.state = 128
                self.action_input()
                self.state = 129
                self.match(JOILangParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 131
                    self.output()
                    self.state = 132
                    self.match(JOILangParser.ASSIGN)


                self.state = 136
                self.match(JOILangParser.T__2)
                self.state = 137
                self.tag_list()
                self.state = 138
                self.match(JOILangParser.T__3)
                self.state = 139
                self.match(JOILangParser.DOT)
                self.state = 140
                self.match(JOILangParser.IDENTIFIER)
                self.state = 141
                self.match(JOILangParser.T__2)
                self.state = 142
                self.action_input()
                self.state = 143
                self.match(JOILangParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JOILangParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JOILangParser.RULE_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput" ):
                listener.enterOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput" ):
                listener.exitOutput(self)




    def output(self):

        localctx = JOILangParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_output)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(JOILangParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Range_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALL(self):
            return self.getToken(JOILangParser.ALL, 0)

        def ANY(self):
            return self.getToken(JOILangParser.ANY, 0)

        def getRuleIndex(self):
            return JOILangParser.RULE_range_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange_type" ):
                listener.enterRange_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange_type" ):
                listener.exitRange_type(self)




    def range_type(self):

        localctx = JOILangParser.Range_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_range_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tag_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hashtag_list(self):
            return self.getTypedRuleContext(JOILangParser.Hashtag_listContext,0)


        def getRuleIndex(self):
            return JOILangParser.RULE_tag_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTag_list" ):
                listener.enterTag_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTag_list" ):
                listener.exitTag_list(self)




    def tag_list(self):

        localctx = JOILangParser.Tag_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tag_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.hashtag_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Hashtag_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASHTAG_ID(self, i:int=None):
            if i is None:
                return self.getTokens(JOILangParser.HASHTAG_ID)
            else:
                return self.getToken(JOILangParser.HASHTAG_ID, i)

        def getRuleIndex(self):
            return JOILangParser.RULE_hashtag_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHashtag_list" ):
                listener.enterHashtag_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHashtag_list" ):
                listener.exitHashtag_list(self)




    def hashtag_list(self):

        localctx = JOILangParser.Hashtag_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_hashtag_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 153
                self.match(JOILangParser.HASHTAG_ID)
                self.state = 156 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==48):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Action_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_list(self):
            return self.getTypedRuleContext(JOILangParser.Input_listContext,0)


        def getRuleIndex(self):
            return JOILangParser.RULE_action_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction_input" ):
                listener.enterAction_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction_input" ):
                listener.exitAction_input(self)




    def action_input(self):

        localctx = JOILangParser.Action_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_action_input)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [3, 7, 8, 9, 18, 19, 27, 28, 46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.input_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arithmetic_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JOILangParser.Arithmetic_expressionContext)
            else:
                return self.getTypedRuleContext(JOILangParser.Arithmetic_expressionContext,i)


        def primary_expression(self):
            return self.getTypedRuleContext(JOILangParser.Primary_expressionContext,0)


        def TIMES(self):
            return self.getToken(JOILangParser.TIMES, 0)

        def DIVIDE(self):
            return self.getToken(JOILangParser.DIVIDE, 0)

        def PLUS(self):
            return self.getToken(JOILangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(JOILangParser.MINUS, 0)

        def getRuleIndex(self):
            return JOILangParser.RULE_arithmetic_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmetic_expression" ):
                listener.enterArithmetic_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmetic_expression" ):
                listener.exitArithmetic_expression(self)



    def arithmetic_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JOILangParser.Arithmetic_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_arithmetic_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 163
                self.match(JOILangParser.T__2)
                self.state = 164
                self.arithmetic_expression(0)
                self.state = 165
                self.match(JOILangParser.T__3)
                pass

            elif la_ == 2:
                self.state = 167
                self.primary_expression()
                pass

